@@ -1,5 +1,5 @@
 ========================================================================
-README for Augmented Reality Sandbox (SARndbox) version 2.2
+README for Augmented Reality Sandbox (SARndbox) version 2.3
 Copyright (c) 2012-2016 Oliver Kreylos
 ========================================================================
 
